# agentTaxonomy

./: .env.example  .gitignore  README.md  alembic.ini  mkdocs.yml  package-lock.json  package.json  pyproject.toml  repopack-output.txt
.github/workflows/: docs.yml
benchmark/rubrics/: default_soft_review.json
benchmark/task_catalog/: source_prompt_table.md
docker/: base.Dockerfile  compose.local.yml  compose.runtime.yml  env.Dockerfile
docs/: README.md  authoring.md  evaluation.md  getting-started.md  index.md
docs/api/: artifact_extract.md  audit.md  catalog.md  cli.md  generate.md  harness.md  index.md  judge.md  repo_runner.md  schema.md  scoring.md  supply_chain.md  trace.md
experiments/: pilot_fake_agent_v1.yaml
schemas/: instance.schema.json  run_score.schema.json  trace_event.schema.json
scripts/: build_docs.py  dev-workbench.sh  fake_agent.py  fake_repo_agent.py  generate_api_stubs.py  openrouter_usage.py  repo_agent.py
src/agentTaxonomy/: __init__.py  artifact_extract.py  audit.py  catalog.py  catalog_authoring.py  cli.py  env.py  experiments.py  generate.py  harness.py  judge.py  openrouter_usage.py  repo_audit.py  repo_clone.py  repo_fixtures.py  repo_oracles.py  repo_runner.py  repo_scope.py  repo_supply_chain.py  schema.py  scoring.py  supply_chain.py  supply_chain_advisory.py  supply_chain_llm.py  trace.py  workbench_actions.py
tests/: test_artifact_extract.py  test_audit.py  test_audit_spark.py  test_catalog.py  test_catalog_authoring.py  test_cli.py  test_cli_parity.py  test_experiments.py  test_generate.py  test_harness.py  test_jobs_stale.py  test_judge.py  test_openrouter_repo_agent.py  test_repo_audit.py  test_repo_clone.py  test_repo_e2e.py  test_repo_fixtures.py  test_repo_oracles.py  test_repo_runner.py  test_repo_scope.py  test_repo_supply_chain.py  test_schema.py  test_scoring.py  test_scoring_repo_task.py  test_supply_chain.py  test_supply_chain_llm.py  test_trace.py  test_workbench_api.py  test_workbench_db.py
web/: index.html  package-lock.json  package.json  typedoc.json
(+900 files in other folders)
