[project]
name = "unsafe-autonomy-bench"
version = "0.1.0"
description = "Taxonomy-first benchmark for evaluating unsafe autonomy in agent tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uab = "agentTaxonomy.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[tool.uv]
package = true
